[gd_scene load_steps=2 format=3 uid="uid://csjvswbo1j4c0"]

[ext_resource type="Script" path="res://Scenes/UI/status_page.gd" id="1_rk64x"]

[node name="StatusPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rk64x")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Success!!"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LevelScore" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Level Score: 0"

[node name="CompletionBonus" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Completion Bonus: +100"

[node name="Level1Score" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Test"

[node name="Level2Score" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="Level3Score" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="Level4Score" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="Level5Score" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="Level6Score" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="Level7Score" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="Level8Score" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="Level9Score" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="Level10Score" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="TotalScore" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Total Score: 0"

[node name="ContinueButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 50
text = "Continue"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
